<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:drawableLeft="@drawable/user_name"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name"
                android:drawableLeft="@drawable/user_name"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/signUpId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textWebEmailAddress"
                android:hint="@string/email"
                android:drawableLeft="@drawable/email"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:hint="@string/password"
                android:drawableLeft="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>