<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <TextView
                android:id="@+id/curriculum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/curriculum"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <LinearLayout
                android:id="@+id/linearView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/curriculum"
                >

                <EditText
                    android:id="@+id/sectionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/section_name"
                    android:inputType="text"/>
                <Button
                    android:id="@+id/addSection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textStyle="bold|italic"
                    android:textSize="15sp"
                    android:text="@string/add_section"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>

            <ListView
                android:id="@+id/sectionList"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/linearView"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>